Update Расчет продуктовых метрик.md

--- a/Расчет продуктовых метрик.md
+++ b/Расчет продуктовых метрик.md
@@ -72,7 +72,9 @@ GROUP BY day
 ```
 
 Визуализация в redash:
-![[newplot (1).png]]
+![newplot (1)](https://github.com/user-attachments/assets/4b9f7f9f-8be4-462f-836c-13af9fd6f7e7)
+
+---
 
 ## 1. Выручка, кумулятивная выручка, прирост выручки 
 
@@ -104,9 +106,9 @@ ORDER BY date
 Визуализация в redash:
 
 Динамика ежедневной выручки:
-![[Pasted image 20250122142724.png]]
+![Pasted image 20250122142724](https://github.com/user-attachments/assets/076f8c36-4cba-450b-9d2c-b3061cfd714f)
 Динамика общей выручки:
-![[Pasted image 20250122142754.png]]
+![Pasted image 20250122142754](https://github.com/user-attachments/assets/8c47d9a9-22af-47c1-b685-78608c0ab830)
 
 Динамика общей выручки положительная.
 Заметное снижение прироста выручки наблюдалось 25 августа, а отрицательный прирост 5 и 6 сентября. 
@@ -157,7 +159,7 @@ LEFT JOIN     (SELECT creation_time::date as date,
 ```
 
 Визуализация в redash:
-![[Pasted image 20250121141239.png]]
+![Pasted image 20250121141239](https://github.com/user-attachments/assets/96e5099c-2699-4187-977b-a67921a11655)
 
 ARPU (Average Revenue Per User) и ARPPU (Average Revenue Per Paying User) демонстрирует  колебания, а AOV (Average Order Value) в первые дни работы сервиса показывал колебания, но затем стабилизировался в районе 375-385 рублей.
 
@@ -223,7 +225,7 @@ LEFT JOIN  t_total_orders        USING(date)
 ```
 
 Визуализация в redash:
-![[Pasted image 20250122150109.png]]
+![Pasted image 20250122150109](https://github.com/user-attachments/assets/c17eb632-d214-461a-acf5-a710cb1cce2b)
 
 Динамические показатели ARPU и ARPPU растут, что свидетельствует о сопоставимом росте выручки и числа клиентов. При этом AOV остаётся неизменным, что свидетельствует о стабильности среднего чека.
 
@@ -281,7 +283,7 @@ ORDER BY weekday_number
 ```
 
 Визуализация в redash:
-![[Pasted image 20250122151956.png]]
+![Pasted image 20250122151956](https://github.com/user-attachments/assets/cfda47f4-12c1-46ff-b6ed-f972e87c177f)
 
 В среднем выручка на пользователя максимальна в выходные дни, остаётся достаточно высокой в понедельник, в остальные дни недели показатели остаются стабильными (530-550 рублей), средняя стоимость заказа меняется незначительно в разные дни недели.
 
@@ -346,7 +348,7 @@ LEFT JOIN
 ```
 
 Визуализация в redash:
-![[Pasted image 20250122155553.png]]
+![Pasted image 20250122155553](https://github.com/user-attachments/assets/95583ece-5fed-436b-9343-6a023e47e804)
 
 Спустя 2 недели с запуска проекта показатель выручки от новых пользователей(синяя часть колонок) остается на достаточно высоком уровне, около 40%
 
@@ -378,7 +380,7 @@ ORDER BY revenue desc
 ```
 
 Визуализация в redash:
-![[Pasted image 20250122155916.png]]
+![Pasted image 20250122155916](https://github.com/user-attachments/assets/3f45df31-e162-47c5-8cba-b9ec423c16c2)
 
 Наибольшую долю в выручке занимает свинина, 'другое' куда были включены товары с долей мене 0,5%, а также оливковое масло и говядина. 
 
@@ -428,9 +430,9 @@ FROM   (SELECT date,
 Визуализация в redash:
 
 Динамика числа платящих пользователей и активных курьеров:
-![[Pasted image 20250122173347.png]]
+![Pasted image 20250122173347](https://github.com/user-attachments/assets/4e248b26-da0e-4f98-8a48-2edba52bf5d5)
 Динамика долей платящих пользователей и активных курьеров:
-![[Pasted image 20250122173356.png]]
+![Pasted image 20250122173356](https://github.com/user-attachments/assets/15486c1c-7dc6-4108-8304-cda7dab4b7cb)
 
 Количество пользователей растёт быстрее, чем количество курьеров. При этом большинство курьеров остаются активными, чего нельзя сказать о пользователях: доля платящих клиентов за 2 недели работы сервиса снизилась. Вероятно большинство пользователей делают один заказ и больше не пользуются сервисом.
 
@@ -467,7 +469,7 @@ ORDER BY date
 ```
 
 Визуализация в redash:
-![[Pasted image 20250122160628.png]]
+![Pasted image 20250122160628](https://github.com/user-attachments/assets/5d29561a-820c-4074-a9db-bd3b62784fa9)
 
 Доля пользователей с несколькими заказами (красная часть графика) в среднем составляет около 20–25%.
 
@@ -504,7 +506,7 @@ ORDER BY hour
 ```
 
 Визуализация в redash:
-![[Pasted image 20250122163332.png]]
+![Pasted image 20250122163332](https://github.com/user-attachments/assets/c0d14562-60ed-4228-b870-de04d039e3db)
 
 Пиковая активность пользователей приходится на вечернее время (18:00–22:00), минимальная активность — ночью (1:00–6:00). Показатель cancel rate остаётся стабильно низким в районе 5%, что может говорить о качественной работе сервиса даже в пиковые периоды. 
 
@@ -529,7 +531,7 @@ ORDER BY date
 ```
 
 Визуализация в redash:
-![[Pasted image 20250122172741.png]]
+![Pasted image 20250122172741](https://github.com/user-attachments/assets/f1873484-4cd6-48e6-9fee-599ca8b6209f)
 
 Среднее время доставки остаётся стабильным на уровне 20 минут. Учитывая, что общая выручка растет - такое время доставки является приемлемым для пользователей. При этом уменьшение времени доставки может также рассматриваться, как точка роста.
 
